# Hatiin

./: HELLO  README.md  package.json  playwright.config.ts  playwright.freighter.config.ts  tsconfig.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/bills/: route.ts
app/api/health/: route.ts
app/api/stats/: route.ts
app/bills/[id]/: page.tsx
app/dashboard/: page.tsx
app/dashboard/create/: page.tsx
app/stats/: page.tsx
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile
contracts/scripts/: deploy.sh
contracts/split-escrow/: Cargo.toml
contracts/split-escrow/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/split-escrow/test_snapshots/test/: cancel_then_each_contributor_refunds_their_share.1.json  explicit_release_pays_creator_when_fully_funded.1.json  happy_path_two_shares_fund_and_release.1.json  initialize_records_admin_and_token.1.json  open_is_blocked_while_paused.1.json  overfunding_a_share_is_rejected.1.json  pay_after_deadline_is_rejected.1.json  refund_after_deadline_on_open_bill_is_allowed.1.json  refund_on_open_bill_before_deadline_is_rejected.1.json
docs/: ARCHITECTURE.md
scripts/: setup-usdc.mjs  take-screenshots.ts
src/server/config/: env.ts  soroban.ts
src/server/lib/: eventBus.ts
src/server/middleware/: withOptionalAuth.ts
src/server/service/: bill.service.ts  usage.service.ts
src/server/stellar/: federation.ts  soroban.ts
src/ui/components/: ConnectWallet.tsx  EnableUsdc.tsx
src/ui/hooks/: useFreighter.ts  (+1 more)
tests/: setup.ts
tests/e2e/: main-flow.spec.ts  prod-real.spec.ts
(+12 files in other folders)
